BUILD: Temporary Server Controller